# playsoundsimple.py

./: .gitignore  PlaySoundSimple.py  README.md  README.rst  build.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py
playsoundsimple/: Player.py  Player.pyi  Units.py  __init__.py  exceptions.py  fluidsynth.py  sound.py  sound.pyi
playsoundsimple/streamers/: __init__.py  base.py  sds.py
